--- a/src/app/heroes/hero/hero.component.html
+++ b/src/app/heroes/hero/hero.component.html
@@ -16,5 +16,10 @@
 
 </dl>
 
-<button class="btn btn-primary mx-2">Cambiar nombre</button>
-<button class="btn btn-primary mx-2">Cambiar edad</button>
+<button class="btn btn-primary mx-2"
+(click)="changeHero()"
+>Cambiar nombre</button>
+
+<button (click)="changeAge()" class="btn btn-primary mx-2">
+  Cambiar edad
+</button>
